Minor updates in comments and README

--- a/cv.tex
+++ b/cv.tex
@@ -12,7 +12,7 @@
 
 
 % Special instruction for creating the contents within \begin{document} ... \end{document}:
-% In each section, the first subsection title needs to be defined in \subsectionone{...} for formatting reason.  The remaining subsection titles need to be defined in the usual \subsection{...}
+% In each section, the first subsection title needs to be defined in \subsectionone{...} for formatting reason.  The remaining subsection titles need to be defined in the usual \subsection{...}.
 
 
 \documentclass[12pt]{article}
