Minor updates in comments and README

--- a/cv.tex
+++ b/cv.tex
@@ -8,7 +8,7 @@
 % I made a great effort to list publications automatically out of a BibTeX file.
 % - The format in which each publication is shown is defined in cv_biblatex_format.tex, which you need to change in order to use a different format.
 % - The publications are automatically sorted in the reverse chronological order.  If you have 10 publications, the first publication in the list is the most recent publication and numbered 10, and the next publication in the list is the second-most recent publication and number 9, etc.
-% - In each bibliography item in publications.bib, add a new field named "Entrysubtype".  (If you use BibDesk on macOS, this can be done by BibDesk > Publication > Add Field...)  This field is used to show only the bibliography items with a specific "Entrysubtype" name.  For example, put "oral" as the value of "Entrysubtype" for oral presentations in conferences, and use "\printbibliography[subtype=oral]" to show only the bibliography items tagged "oral" in "Entrysubtype".  See more examples in \section{Refereed Journal Publications}, \section{Conference Oral Presentations}, \section{Conference Poster Presentations}
+% - In each bibliography item in publications.bib, add a new field named "Entrysubtype".  (If you use BibDesk on macOS, this can be done by BibDesk > Publication > Add Field...)  This field is used to show only the bibliography items with a specific "Entrysubtype" value.  For example, put "oral" as the value of "Entrysubtype" for oral presentations in conferences, and use "\printbibliography[subtype=oral]" to show only the bibliography items tagged "oral" in "Entrysubtype".  See more examples in \section{Refereed Journal Publications}, \section{Conference Oral Presentations}, \section{Conference Poster Presentations}
 
 
 % Special instruction for creating the contents within \begin{document} ... \end{document}:
