Add comments on Minion Pro

--- a/cv.tex
+++ b/cv.tex
@@ -16,6 +16,8 @@
 
 
 \documentclass[12pt]{article}
+% \usepackage[lf,minionint,footnotefigures]{MinionPro}  % for MinionPro font; need to install MinionPro package first
+
 
 %%
 % Personal information
