--- a/publications.bib
+++ b/publications.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Wonseok Shin at 2020-07-31 00:32:11 -0400 
+%% Created for Wonseok Shin at 2020-08-03 14:07:29 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -39,10 +39,10 @@
 	Bdsk-Url-1 = {http://scitation.aip.org/content/aip/journal/apl/107/17/10.1063/1.4934707},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1063/1.4934707}}
 
-@unpublished{Shin:2017afosr,
+@inproceedings{Shin:2017afosr,
 	Author = {Shin, Wonseok and Raman, Aaswath and Fan, Shanhui},
 	Date-Added = {2017-04-06 05:57:23 +0000},
-	Date-Modified = {2017-04-06 06:05:09 +0000},
+	Date-Modified = {2020-08-03 14:06:25 -0400},
 	Day = {10--12},
 	Entrysubtype = {poster},
 	Month = {January},
@@ -200,10 +200,10 @@
 	Bdsk-Url-1 = {http://www.opticsexpress.org/abstract.cfm?URI=oe-21-19-22578},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1364/OE.21.022578}}
 
-@unpublished{Shin:2012pw,
+@inproceedings{Shin:2012pw,
 	Author = {Shin, Wonseok and Fan, Shanhui},
 	Date-Added = {2015-10-23 16:51:47 +0000},
-	Date-Modified = {2015-10-23 16:51:47 +0000},
+	Date-Modified = {2020-08-03 14:06:11 -0400},
 	Day = {21--26},
 	Entrysubtype = {oral},
 	Month = {January},
@@ -212,10 +212,10 @@
 	Year = {2012},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1021/nl402335x}}
 
-@unpublished{Shin:2013cleo,
+@inproceedings{Shin:2013cleo,
 	Author = {Shin, Wonseok and Cai, Wenshan and Catrysse, Peter B. and Veronis, Georgios and Brongersma, Mark L. and Fan, Shanhui},
 	Date-Added = {2015-10-23 16:51:47 +0000},
-	Date-Modified = {2015-10-23 16:51:47 +0000},
+	Date-Modified = {2020-08-03 14:06:17 -0400},
 	Day = {9--14},
 	Entrysubtype = {oral},
 	Month = {June},
@@ -272,10 +272,10 @@
 	Bdsk-Url-1 = {http://link.aps.org/doi/10.1103/PhysRevLett.110.183901},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1103/PhysRevLett.110.183901}}
 
-@unpublished{Shin:2012muri,
+@inproceedings{Shin:2012muri,
 	Author = {Shin, Wonseok and Raman, Aaswath and Fan, Shanhui},
 	Date-Added = {2015-10-23 16:51:47 +0000},
-	Date-Modified = {2015-10-23 16:51:47 +0000},
+	Date-Modified = {2020-08-03 14:06:03 -0400},
 	Day = {8--9},
 	Entrysubtype = {poster},
 	Month = {October},
